fix spacing inconsistencies

--- a/src/components/complex/skill-search/style.scss
+++ b/src/components/complex/skill-search/style.scss
@@ -25,7 +25,6 @@
 
   span {
     align-self: center;
-    font-size: 24px;
 
     &.primary {
       color: #ffc061;
